--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-.header__logo > img {
+.header__logo__img {
     height: 50px;
 }
 
@@ -31,6 +31,6 @@ header{
 .header__user-buttons > ul > li {
     margin: 0 3px;
 } 
-img {
+.header__user-buttons__icons {
     height: 18px;    
 }
