Style: Add wrap to UL

--- a/src/components/VideoList/VideoList.css
+++ b/src/components/VideoList/VideoList.css
@@ -2,6 +2,7 @@
 
 } */
 ul.grid{
-    display: grid;
-    grid-template-columns:repeat(3, 1fr)
+    display:flex;
+    flex-wrap: wrap;
+    list-style-type: none;
 }
