--- a/src/pages/DetailPage/DetailPage.css
+++ b/src/pages/DetailPage/DetailPage.css
@@ -1,15 +1,19 @@
-.DetailPage__container{
-    display: flex;
+.DetailPage__container {
+  display: flex;
 }
-.DetailPage__container ul{
-    list-style-type: none;
+.DetailPage__container ul {
+  list-style-type: none;
 }
 
-.videoItem__container{
-   height:94px;
-   width: 400px;
+.videoItem__container {
+  height: 94px;
+  width: 400px;
 }
-.videoItem__container h5{
-    color: #606060;
-    font-size: 10px;
+.videoItem__container h5 {
+  color: #606060;
+  font-size: 10px;
+}
+iframe {
+  width: 650px;
+  height: 400px;
 }
