--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -2,16 +2,13 @@ main{
     display: flex;
 }
 main .videoList-container{
-    margin-left: 20px;
+    margin-left: 1.25rem;
 }
 /*----------------------------------------- VideoItem */
-main .videoItem__container{
-    width: 318px;
-    height:175px;
-    display:flex;
+main .videoItemHome__container{
+    width: 20rem;
+    height: 11rem;
+    display: flex;
     flex-direction: column;
+    margin-bottom: 5rem;    
 }
-/* 
-main .videoItem__container div .videoItem__container__img{
-
-} */
