--- a/src/pages/DetailPage/DetailPage.css
+++ b/src/pages/DetailPage/DetailPage.css
@@ -5,10 +5,10 @@
   list-style-type: none;
 }
 
-.videoItem__container {
+/* .videoItem__container {
   height: 94px;
   width: 400px;
-}
+} */
 .videoItem__container h5 {
   color: #606060;
   font-size: 10px;
