--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,15 +1,15 @@
 .search-container > form {
     position: relative;
     width: 100%;
-    height: 28px;
+    height: 1.75rem;
     display: flex;
 }
 
 .search-input{
     border:1px solid #c4bebe;;
     height: 100%;
-    padding: 0 15px;
-    font-size: 15px;
+    padding: 0 0.94rem;
+    font-size: 0.94rem;
 }
 .search-button{
     height: 100%;
