--- a/src/pages/DetailPage/DetailPage.css
+++ b/src/pages/DetailPage/DetailPage.css
@@ -5,15 +5,11 @@
   list-style-type: none;
 }
 
-/* .videoItem__container {
-  height: 94px;
-  width: 400px;
-} */
 .videoItem__container h5 {
   color: #606060;
-  font-size: 10px;
+  font-size: 0.62rem;
 }
 iframe {
-  width: 650px;
-  height: 400px;
+  width: 41rem;
+  height: 25rem;
 }
