--- a/src/components/VideoItem/VideoItem.css
+++ b/src/components/VideoItem/VideoItem.css
@@ -11,6 +11,9 @@
   display: flex;
   flex-direction: column;
 }
+.videoItem__container__info{
+  padding: .8rem;
+}
 .videoItem__container h4 {
   font-size: 0.8rem;
   text-overflow: ellipsis;
